--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,12 @@ jobs:
       - name: "Login to Docker hub"
         run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
 
+      - name: "Building docker image"
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/first-image .
+
+      - name: "Pushing to Docker Hub"
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/first-image
+
 
 
 
