--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,10 @@ jobs:
         run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
 
       - name: "Building docker image"
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/first-image .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-image .
 
       - name: "Pushing to Docker Hub"
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/first-image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/my-image
 
 
 
