--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,10 @@ jobs:
       - name: "Login to Docker hub"
         run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
 
+      - name: "Install dependencies"
+      run: |
+        python -m pip install --upgrade pip  
+
       - name: "Building docker image"
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-image .
 
